--- a/Dyte Swift Sample/Dyte Swift Sample/Base.lproj/Main.storyboard
+++ b/Dyte Swift Sample/Dyte Swift Sample/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19134"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zsE-I2-yJM">
-                                <rect key="frame" x="87" y="164" width="240" height="342"/>
+                                <rect key="frame" x="87" y="124" width="240" height="342"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter meeting title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KtC-N6-In0">
                                         <rect key="frame" x="50" y="64" width="140" height="21"/>
@@ -79,11 +80,13 @@
                         <viewLayoutGuide key="safeArea" id="Q8h-5r-Dh8"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="zsE-I2-yJM" firstAttribute="top" secondItem="Q8h-5r-Dh8" secondAttribute="top" constant="120" id="Np5-Tz-cui"/>
+                            <constraint firstItem="zsE-I2-yJM" firstAttribute="top" secondItem="Q8h-5r-Dh8" secondAttribute="top" constant="80" id="Np5-Tz-cui"/>
                             <constraint firstItem="zsE-I2-yJM" firstAttribute="centerX" secondItem="Q8h-5r-Dh8" secondAttribute="centerX" id="Q3N-1y-sCe"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Create a meeting" id="YUd-wO-h8X"/>
+                    <tabBarItem key="tabBarItem" title="Create a meeting" id="YUd-wO-h8X">
+                        <imageReference key="image" image="video.badge.plus.fill" catalog="system"/>
+                    </tabBarItem>
                     <connections>
                         <outlet property="createButton" destination="zYy-kC-WLh" id="gGA-wO-T64"/>
                         <outlet property="meetingTitle" destination="WLY-r1-LwI" id="Pgg-aQ-erb"/>
@@ -103,7 +106,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YYS-aC-8L2">
-                                <rect key="frame" x="87" y="164" width="240" height="342"/>
+                                <rect key="frame" x="87" y="124" width="240" height="342"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter room name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SQX-Pn-S58">
                                         <rect key="frame" x="54.5" y="64" width="131" height="21"/>
@@ -166,10 +169,12 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="YYS-aC-8L2" firstAttribute="centerX" secondItem="gbj-TU-BWZ" secondAttribute="centerX" id="VaZ-Kl-a98"/>
-                            <constraint firstItem="YYS-aC-8L2" firstAttribute="top" secondItem="gbj-TU-BWZ" secondAttribute="top" constant="120" id="bf3-OR-fud"/>
+                            <constraint firstItem="YYS-aC-8L2" firstAttribute="top" secondItem="gbj-TU-BWZ" secondAttribute="top" constant="80" id="bf3-OR-fud"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Join a meeting" id="uCC-Jj-VPO"/>
+                    <tabBarItem key="tabBarItem" title="Join a meeting" id="uCC-Jj-VPO">
+                        <imageReference key="image" image="arrow.down.left.video.fill" catalog="system"/>
+                    </tabBarItem>
                     <connections>
                         <outlet property="joinButton" destination="2iv-Vg-3dc" id="ZPm-Yk-YSJ"/>
                         <outlet property="participantName" destination="1fU-TC-iNP" id="Uc2-BG-P3Z"/>
@@ -190,8 +195,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="VTs-W2-QwC" kind="relationship" relationship="viewControllers" id="sfi-OF-uJq"/>
                         <segue destination="Lpe-7d-LwX" kind="relationship" relationship="viewControllers" id="IGh-KB-wnE"/>
+                        <segue destination="VTs-W2-QwC" kind="relationship" relationship="viewControllers" id="sfi-OF-uJq"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nAs-c7-v2d" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -200,6 +205,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="arrow.down.left.video.fill" catalog="system" width="128" height="82"/>
+        <image name="video.badge.plus.fill" catalog="system" width="128" height="88"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
